Script for results processing ready

--- a/prototyping/logo_detection_results/results_processing.ipynb
+++ b/prototyping/logo_detection_results/results_processing.ipynb
@@ -41,23 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f06b93b",
+   "execution_count": 86,
+   "id": "dcacad6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#main_folder = 'path/to/main'\n",
-    "#results_file = 'path/to/results/file'\n",
-    "\n",
     "def result_processing(path_to_results_dir:str, path_to_res_file:str, country:str):\n",
     "    ### This will return a parque file \n",
     "    \n",
-    "    file_path = path_to_res_file+f'/results_{country}.parquet'\n",
+    "    # File to store the results\n",
+    "    file_path = path_to_res_file+f'results_{country}.parquet'\n",
     "    \n",
     "    # Channel names \n",
     "    channel_dirs = [filename for filename in os.listdir(path_to_results_dir) if not filename.startswith('.')]\n",
     "    for channel_d in channel_dirs:\n",
-    "        sub_folder_path = os.path.join(main_folder,channel_d)\n",
+    "        sub_folder_path = os.path.join(path_to_results_dir,channel_d)\n",
     "        # Access the video's frames folder \n",
     "        videos_dir = [filename for filename in os.listdir(sub_folder_path) if not filename.startswith('.')]\n",
     "        for video_d in videos_dir:\n",
@@ -72,7 +70,7 @@
     "                    \n",
     "                    with open(os.path.join(labels_dir_path,label_f), 'r') as f:\n",
     "                        lines = f.readlines()\n",
-    "                        \n",
+    "                        # Write the labels to a data frame\n",
     "                        df = pd.DataFrame([l.split() for l in lines],columns=['class_label',\n",
     "                                'x_center','y_center','width','height','confidence_level'])\n",
     "                        df.insert(0,'Frame', label_f.split('.')[0])\n",
@@ -87,356 +85,43 @@
     "            else: \n",
     "                pass\n",
     "            \n",
-    "    return file_path "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "dcacad6e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return file_path \n",
+    "\n",
+    "\n",
     "def transf_parque(parque_file_path:str):\n",
     "    res = pd.read_parquet(parque_file_path, engine='fastparquet')\n",
+    "    res\n",
     "    # Converting to CSV\n",
-    "    res.to_csv(parque_file_path.split('.')[0]+'.csv', index = False)"
+    "    res.to_csv(parque_file_path.split('.par')[0]+'.csv', index = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 87,
    "id": "2f3ddff7",
    "metadata": {},
    "outputs": [],
    "source": [
     "main_folder = '../../../yolov5/Sweden_analysis_TEST'\n",
-    "results_file = '../../data_collection/data/'"
+    "end_results_folder = '../../data_collection/data/'\n",
+    "country = 'sweden'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "aaeb1492",
+   "execution_count": 88,
+   "id": "2d63074a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../../../yolov5/Sweden_analysis_TEST/DIKforbundet/FHHm5w_0vaU/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/DIKforbundet/-P98UVhv08s/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/DIKforbundet/AAHMZ3uhgQg/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/DIKforbundet/SjePLkWCzMU/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundetkungsbacka9217/5xJu4JAONlM/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundetkungsbacka9217/gCoRpdq5ang/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundetkungsbacka9217/i7tg1Svv7Fk/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundetkungsbacka9217/ZKIKoeITcV8/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundetkungsbacka9217/wS3CYpms5H0/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundetkungsbacka9217/ahQTMZyvFTQ/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundetkungsbacka9217/m572tfJ5dOg/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundetkungsbacka9217/OiT8xAjfifU/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundetkungalv6704/YuD8CXsQ_GU/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundetkungalv6704/QXrNltZC9L0/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundetkungalv6704/tm_DMKIpLCM/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundetkungalv6704/573FfBFJ8kU/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/HfdDodSyF00/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/qOhtbZl_tZY/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/xdRVAC4Nw9k/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/6lPtPfVQuas/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/6ncrxRnKMCU/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/llxeV4KGdaA/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/O_mHlDhSYRA/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/mLN0sotRP7M/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/LEblJM4T_uY/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/iify0BNtmGM/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/YY396Ph6S6I/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/PYTrjvoyq8g/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/P7AHxtmeEvQ/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/aRL6UnMSoQQ/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/iX16bzmix2I/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/sGOf7QxpUS0/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/ta7UNxG0qck/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/ISIiRFTaINk/labels/\n",
-      "../../../yolov5/Sweden_analysis_TEST/lararforbundethalmstad4100/jNsUJxyMGoU/labels/\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'../../data_collection/data//results_sweden.parquet'"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "result_processing(main_folder, results_file, 'sweden')"
+    "res = result_processing(main_folder, end_results_folder, country)\n",
+    "transf_parque(res)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c3e1358",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "7f855616",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bla = pd.read_parquet(results_file+'/results_sweden.parquet', engine='fastparquet')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "9ba316d0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Channel</th>\n",
-       "      <th>Video_id</th>\n",
-       "      <th>Frame</th>\n",
-       "      <th>class_label</th>\n",
-       "      <th>x_center</th>\n",
-       "      <th>y_center</th>\n",
-       "      <th>width</th>\n",
-       "      <th>height</th>\n",
-       "      <th>confidence_level</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>DIKforbundet</td>\n",
-       "      <td>AAHMZ3uhgQg</td>\n",
-       "      <td>Sverige_socialdemokraterna132-Copy1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.497118</td>\n",
-       "      <td>0.524194</td>\n",
-       "      <td>0.157955</td>\n",
-       "      <td>0.351254</td>\n",
-       "      <td>0.676906</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>lararforbundetkungsbacka9217</td>\n",
-       "      <td>5xJu4JAONlM</td>\n",
-       "      <td>5xJu4JAONlM-134_2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.346875</td>\n",
-       "      <td>0.933333</td>\n",
-       "      <td>0.01875</td>\n",
-       "      <td>0.0388889</td>\n",
-       "      <td>0.25112</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>lararforbundetkungsbacka9217</td>\n",
-       "      <td>5xJu4JAONlM</td>\n",
-       "      <td>5xJu4JAONlM-134_3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.861719</td>\n",
-       "      <td>0.980556</td>\n",
-       "      <td>0.0234375</td>\n",
-       "      <td>0.0333333</td>\n",
-       "      <td>0.266715</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>lararforbundetkungsbacka9217</td>\n",
-       "      <td>5xJu4JAONlM</td>\n",
-       "      <td>5xJu4JAONlM-134_3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.884375</td>\n",
-       "      <td>0.9375</td>\n",
-       "      <td>0.025</td>\n",
-       "      <td>0.0472222</td>\n",
-       "      <td>0.283322</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>lararforbundetkungsbacka9217</td>\n",
-       "      <td>5xJu4JAONlM</td>\n",
-       "      <td>5xJu4JAONlM-134_3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.835156</td>\n",
-       "      <td>0.979167</td>\n",
-       "      <td>0.0234375</td>\n",
-       "      <td>0.0361111</td>\n",
-       "      <td>0.438237</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>lararforbundethalmstad4100</td>\n",
-       "      <td>ISIiRFTaINk</td>\n",
-       "      <td>ISIiRFTaINk-135_2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0655738</td>\n",
-       "      <td>0.559375</td>\n",
-       "      <td>0.0234192</td>\n",
-       "      <td>0.04375</td>\n",
-       "      <td>0.331276</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>lararforbundethalmstad4100</td>\n",
-       "      <td>jNsUJxyMGoU</td>\n",
-       "      <td>jNsUJxyMGoU-137_4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.80599</td>\n",
-       "      <td>0.856944</td>\n",
-       "      <td>0.0390625</td>\n",
-       "      <td>0.0972222</td>\n",
-       "      <td>0.542203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>lararforbundethalmstad4100</td>\n",
-       "      <td>jNsUJxyMGoU</td>\n",
-       "      <td>jNsUJxyMGoU-137_2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.80625</td>\n",
-       "      <td>0.858796</td>\n",
-       "      <td>0.034375</td>\n",
-       "      <td>0.0916667</td>\n",
-       "      <td>0.372028</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>lararforbundethalmstad4100</td>\n",
-       "      <td>jNsUJxyMGoU</td>\n",
-       "      <td>jNsUJxyMGoU-137_5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.805208</td>\n",
-       "      <td>0.855556</td>\n",
-       "      <td>0.0364583</td>\n",
-       "      <td>0.0944444</td>\n",
-       "      <td>0.27815</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87</th>\n",
-       "      <td>lararforbundethalmstad4100</td>\n",
-       "      <td>jNsUJxyMGoU</td>\n",
-       "      <td>jNsUJxyMGoU-137_0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.805729</td>\n",
-       "      <td>0.857407</td>\n",
-       "      <td>0.0385417</td>\n",
-       "      <td>0.0981481</td>\n",
-       "      <td>0.50717</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>88 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         Channel     Video_id  \\\n",
-       "0                   DIKforbundet  AAHMZ3uhgQg   \n",
-       "1   lararforbundetkungsbacka9217  5xJu4JAONlM   \n",
-       "2   lararforbundetkungsbacka9217  5xJu4JAONlM   \n",
-       "3   lararforbundetkungsbacka9217  5xJu4JAONlM   \n",
-       "4   lararforbundetkungsbacka9217  5xJu4JAONlM   \n",
-       "..                           ...          ...   \n",
-       "83    lararforbundethalmstad4100  ISIiRFTaINk   \n",
-       "84    lararforbundethalmstad4100  jNsUJxyMGoU   \n",
-       "85    lararforbundethalmstad4100  jNsUJxyMGoU   \n",
-       "86    lararforbundethalmstad4100  jNsUJxyMGoU   \n",
-       "87    lararforbundethalmstad4100  jNsUJxyMGoU   \n",
-       "\n",
-       "                                  Frame class_label   x_center  y_center  \\\n",
-       "0   Sverige_socialdemokraterna132-Copy1           1   0.497118  0.524194   \n",
-       "1                     5xJu4JAONlM-134_2           0   0.346875  0.933333   \n",
-       "2                     5xJu4JAONlM-134_3           0   0.861719  0.980556   \n",
-       "3                     5xJu4JAONlM-134_3           0   0.884375    0.9375   \n",
-       "4                     5xJu4JAONlM-134_3           0   0.835156  0.979167   \n",
-       "..                                  ...         ...        ...       ...   \n",
-       "83                    ISIiRFTaINk-135_2           1  0.0655738  0.559375   \n",
-       "84                    jNsUJxyMGoU-137_4           0    0.80599  0.856944   \n",
-       "85                    jNsUJxyMGoU-137_2           0    0.80625  0.858796   \n",
-       "86                    jNsUJxyMGoU-137_5           0   0.805208  0.855556   \n",
-       "87                    jNsUJxyMGoU-137_0           0   0.805729  0.857407   \n",
-       "\n",
-       "        width     height confidence_level  \n",
-       "0    0.157955   0.351254         0.676906  \n",
-       "1     0.01875  0.0388889          0.25112  \n",
-       "2   0.0234375  0.0333333         0.266715  \n",
-       "3       0.025  0.0472222         0.283322  \n",
-       "4   0.0234375  0.0361111         0.438237  \n",
-       "..        ...        ...              ...  \n",
-       "83  0.0234192    0.04375         0.331276  \n",
-       "84  0.0390625  0.0972222         0.542203  \n",
-       "85   0.034375  0.0916667         0.372028  \n",
-       "86  0.0364583  0.0944444          0.27815  \n",
-       "87  0.0385417  0.0981481          0.50717  \n",
-       "\n",
-       "[88 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bla"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "f243311e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Converting to CSV\n",
-    "bla.to_csv(results_file+'/results_sweden.parquet'.split('.')[0]+'.csv', index = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebb441ab",
+   "id": "80802960",
    "metadata": {},
    "outputs": [],
    "source": []
