--- a/prototyping/logo_detection_results/results_processing.ipynb
+++ b/prototyping/logo_detection_results/results_processing.ipynb
@@ -121,7 +121,578 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "287f815f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "976102d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "id": "80802960",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = pd.read_parquet('../../data_collection/data/results_sweden.parquet', engine='fastparquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "0baab186",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Channel</th>\n",
+       "      <th>Video_id</th>\n",
+       "      <th>Frame</th>\n",
+       "      <th>class_label</th>\n",
+       "      <th>x_center</th>\n",
+       "      <th>y_center</th>\n",
+       "      <th>width</th>\n",
+       "      <th>height</th>\n",
+       "      <th>confidence_level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Skolledarforbundet</td>\n",
+       "      <td>TWQvMVtFPjc</td>\n",
+       "      <td>TWQvMVtFPjc_2700</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.507611</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>0.165105</td>\n",
+       "      <td>0.258333</td>\n",
+       "      <td>0.755785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Skolledarforbundet</td>\n",
+       "      <td>nkm5M0DpwhI</td>\n",
+       "      <td>nkm5M0DpwhI_1750</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.471311</td>\n",
+       "      <td>0.823958</td>\n",
+       "      <td>0.0222482</td>\n",
+       "      <td>0.0395833</td>\n",
+       "      <td>0.429938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Skolledarforbundet</td>\n",
+       "      <td>TKPUP6cenBE</td>\n",
+       "      <td>TKPUP6cenBE_3500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.608073</td>\n",
+       "      <td>0.650463</td>\n",
+       "      <td>0.0265625</td>\n",
+       "      <td>0.0490741</td>\n",
+       "      <td>0.693334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Skolledarforbundet</td>\n",
+       "      <td>TKPUP6cenBE</td>\n",
+       "      <td>TKPUP6cenBE_4000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.638542</td>\n",
+       "      <td>0.808796</td>\n",
+       "      <td>0.01875</td>\n",
+       "      <td>0.0305556</td>\n",
+       "      <td>0.475797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Skolledarforbundet</td>\n",
+       "      <td>TKPUP6cenBE</td>\n",
+       "      <td>TKPUP6cenBE_750</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.449479</td>\n",
+       "      <td>0.667593</td>\n",
+       "      <td>0.0270833</td>\n",
+       "      <td>0.0518519</td>\n",
+       "      <td>0.659074</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Channel     Video_id             Frame class_label  x_center  \\\n",
+       "0  Skolledarforbundet  TWQvMVtFPjc  TWQvMVtFPjc_2700           1  0.507611   \n",
+       "1  Skolledarforbundet  nkm5M0DpwhI  nkm5M0DpwhI_1750           1  0.471311   \n",
+       "2  Skolledarforbundet  TKPUP6cenBE  TKPUP6cenBE_3500           1  0.608073   \n",
+       "3  Skolledarforbundet  TKPUP6cenBE  TKPUP6cenBE_4000           1  0.638542   \n",
+       "4  Skolledarforbundet  TKPUP6cenBE   TKPUP6cenBE_750           1  0.449479   \n",
+       "\n",
+       "   y_center      width     height confidence_level  \n",
+       "0     0.375   0.165105   0.258333         0.755785  \n",
+       "1  0.823958  0.0222482  0.0395833         0.429938  \n",
+       "2  0.650463  0.0265625  0.0490741         0.693334  \n",
+       "3  0.808796    0.01875  0.0305556         0.475797  \n",
+       "4  0.667593  0.0270833  0.0518519         0.659074  "
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "3715c4fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18346, 9)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "2a491c6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = res.astype({'confidence_level':'float'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "ee4d49b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Channel</th>\n",
+       "      <th>Video_id</th>\n",
+       "      <th>Frame</th>\n",
+       "      <th>class_label</th>\n",
+       "      <th>x_center</th>\n",
+       "      <th>y_center</th>\n",
+       "      <th>width</th>\n",
+       "      <th>height</th>\n",
+       "      <th>confidence_level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>480</th>\n",
+       "      <td>handelsanstalldasforbund</td>\n",
+       "      <td>f_7slw419Lo</td>\n",
+       "      <td>f_7slw419Lo_870</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.172266</td>\n",
+       "      <td>0.11875</td>\n",
+       "      <td>0.0992187</td>\n",
+       "      <td>0.1625</td>\n",
+       "      <td>0.899152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>483</th>\n",
+       "      <td>handelsanstalldasforbund</td>\n",
+       "      <td>f_7slw419Lo</td>\n",
+       "      <td>f_7slw419Lo_290</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.172266</td>\n",
+       "      <td>0.122222</td>\n",
+       "      <td>0.102344</td>\n",
+       "      <td>0.169444</td>\n",
+       "      <td>0.904200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>484</th>\n",
+       "      <td>handelsanstalldasforbund</td>\n",
+       "      <td>f_7slw419Lo</td>\n",
+       "      <td>f_7slw419Lo_580</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.172266</td>\n",
+       "      <td>0.118056</td>\n",
+       "      <td>0.0992187</td>\n",
+       "      <td>0.161111</td>\n",
+       "      <td>0.897128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>486</th>\n",
+       "      <td>handelsanstalldasforbund</td>\n",
+       "      <td>f_7slw419Lo</td>\n",
+       "      <td>f_7slw419Lo_1160</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.172266</td>\n",
+       "      <td>0.118056</td>\n",
+       "      <td>0.0992187</td>\n",
+       "      <td>0.161111</td>\n",
+       "      <td>0.899717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>524</th>\n",
+       "      <td>handelsanstalldasforbund</td>\n",
+       "      <td>zw4_igN8xns</td>\n",
+       "      <td>zw4_igN8xns_6750</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.953125</td>\n",
+       "      <td>0.356944</td>\n",
+       "      <td>0.0895833</td>\n",
+       "      <td>0.213889</td>\n",
+       "      <td>0.930246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18264</th>\n",
+       "      <td>losverige</td>\n",
+       "      <td>wqLABHlwXt8</td>\n",
+       "      <td>wqLABHlwXt8_3250</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.180729</td>\n",
+       "      <td>0.11713</td>\n",
+       "      <td>0.0822917</td>\n",
+       "      <td>0.150926</td>\n",
+       "      <td>0.927944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18266</th>\n",
+       "      <td>losverige</td>\n",
+       "      <td>wqLABHlwXt8</td>\n",
+       "      <td>wqLABHlwXt8_750</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.18125</td>\n",
+       "      <td>0.116667</td>\n",
+       "      <td>0.0833333</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.931602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18267</th>\n",
+       "      <td>losverige</td>\n",
+       "      <td>wqLABHlwXt8</td>\n",
+       "      <td>wqLABHlwXt8_6500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.18151</td>\n",
+       "      <td>0.115278</td>\n",
+       "      <td>0.0828125</td>\n",
+       "      <td>0.149074</td>\n",
+       "      <td>0.937273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18268</th>\n",
+       "      <td>losverige</td>\n",
+       "      <td>wqLABHlwXt8</td>\n",
+       "      <td>wqLABHlwXt8_1000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.18099</td>\n",
+       "      <td>0.116204</td>\n",
+       "      <td>0.0828125</td>\n",
+       "      <td>0.150926</td>\n",
+       "      <td>0.933910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18269</th>\n",
+       "      <td>losverige</td>\n",
+       "      <td>wqLABHlwXt8</td>\n",
+       "      <td>wqLABHlwXt8_4750</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.180208</td>\n",
+       "      <td>0.11713</td>\n",
+       "      <td>0.0833333</td>\n",
+       "      <td>0.15463</td>\n",
+       "      <td>0.932762</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>148 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Channel     Video_id             Frame class_label  \\\n",
+       "480    handelsanstalldasforbund  f_7slw419Lo   f_7slw419Lo_870           1   \n",
+       "483    handelsanstalldasforbund  f_7slw419Lo   f_7slw419Lo_290           1   \n",
+       "484    handelsanstalldasforbund  f_7slw419Lo   f_7slw419Lo_580           1   \n",
+       "486    handelsanstalldasforbund  f_7slw419Lo  f_7slw419Lo_1160           1   \n",
+       "524    handelsanstalldasforbund  zw4_igN8xns  zw4_igN8xns_6750           1   \n",
+       "...                         ...          ...               ...         ...   \n",
+       "18264                 losverige  wqLABHlwXt8  wqLABHlwXt8_3250           1   \n",
+       "18266                 losverige  wqLABHlwXt8   wqLABHlwXt8_750           1   \n",
+       "18267                 losverige  wqLABHlwXt8  wqLABHlwXt8_6500           1   \n",
+       "18268                 losverige  wqLABHlwXt8  wqLABHlwXt8_1000           1   \n",
+       "18269                 losverige  wqLABHlwXt8  wqLABHlwXt8_4750           1   \n",
+       "\n",
+       "       x_center  y_center      width    height  confidence_level  \n",
+       "480    0.172266   0.11875  0.0992187    0.1625          0.899152  \n",
+       "483    0.172266  0.122222   0.102344  0.169444          0.904200  \n",
+       "484    0.172266  0.118056  0.0992187  0.161111          0.897128  \n",
+       "486    0.172266  0.118056  0.0992187  0.161111          0.899717  \n",
+       "524    0.953125  0.356944  0.0895833  0.213889          0.930246  \n",
+       "...         ...       ...        ...       ...               ...  \n",
+       "18264  0.180729   0.11713  0.0822917  0.150926          0.927944  \n",
+       "18266   0.18125  0.116667  0.0833333      0.15          0.931602  \n",
+       "18267   0.18151  0.115278  0.0828125  0.149074          0.937273  \n",
+       "18268   0.18099  0.116204  0.0828125  0.150926          0.933910  \n",
+       "18269  0.180208   0.11713  0.0833333   0.15463          0.932762  \n",
+       "\n",
+       "[148 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res[res['confidence_level'] > 0.85]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "c7d27f9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_csv = pd.read_csv('../../data_collection/data/results_sweden.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "048e88ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Channel</th>\n",
+       "      <th>Video_id</th>\n",
+       "      <th>Frame</th>\n",
+       "      <th>class_label</th>\n",
+       "      <th>x_center</th>\n",
+       "      <th>y_center</th>\n",
+       "      <th>width</th>\n",
+       "      <th>height</th>\n",
+       "      <th>confidence_level</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Skolledarforbundet</td>\n",
+       "      <td>TWQvMVtFPjc</td>\n",
+       "      <td>TWQvMVtFPjc_2700</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.507611</td>\n",
+       "      <td>0.375000</td>\n",
+       "      <td>0.165105</td>\n",
+       "      <td>0.258333</td>\n",
+       "      <td>0.755785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Skolledarforbundet</td>\n",
+       "      <td>nkm5M0DpwhI</td>\n",
+       "      <td>nkm5M0DpwhI_1750</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.471311</td>\n",
+       "      <td>0.823958</td>\n",
+       "      <td>0.022248</td>\n",
+       "      <td>0.039583</td>\n",
+       "      <td>0.429938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Skolledarforbundet</td>\n",
+       "      <td>TKPUP6cenBE</td>\n",
+       "      <td>TKPUP6cenBE_3500</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.608073</td>\n",
+       "      <td>0.650463</td>\n",
+       "      <td>0.026562</td>\n",
+       "      <td>0.049074</td>\n",
+       "      <td>0.693334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Skolledarforbundet</td>\n",
+       "      <td>TKPUP6cenBE</td>\n",
+       "      <td>TKPUP6cenBE_4000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.638542</td>\n",
+       "      <td>0.808796</td>\n",
+       "      <td>0.018750</td>\n",
+       "      <td>0.030556</td>\n",
+       "      <td>0.475797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Skolledarforbundet</td>\n",
+       "      <td>TKPUP6cenBE</td>\n",
+       "      <td>TKPUP6cenBE_750</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.449479</td>\n",
+       "      <td>0.667593</td>\n",
+       "      <td>0.027083</td>\n",
+       "      <td>0.051852</td>\n",
+       "      <td>0.659074</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Channel     Video_id             Frame  class_label  x_center  \\\n",
+       "0  Skolledarforbundet  TWQvMVtFPjc  TWQvMVtFPjc_2700            1  0.507611   \n",
+       "1  Skolledarforbundet  nkm5M0DpwhI  nkm5M0DpwhI_1750            1  0.471311   \n",
+       "2  Skolledarforbundet  TKPUP6cenBE  TKPUP6cenBE_3500            1  0.608073   \n",
+       "3  Skolledarforbundet  TKPUP6cenBE  TKPUP6cenBE_4000            1  0.638542   \n",
+       "4  Skolledarforbundet  TKPUP6cenBE   TKPUP6cenBE_750            1  0.449479   \n",
+       "\n",
+       "   y_center     width    height  confidence_level  \n",
+       "0  0.375000  0.165105  0.258333          0.755785  \n",
+       "1  0.823958  0.022248  0.039583          0.429938  \n",
+       "2  0.650463  0.026562  0.049074          0.693334  \n",
+       "3  0.808796  0.018750  0.030556          0.475797  \n",
+       "4  0.667593  0.027083  0.051852          0.659074  "
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_csv.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "1cf446ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 18346 entries, 0 to 18345\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   Channel           18346 non-null  object \n",
+      " 1   Video_id          18346 non-null  object \n",
+      " 2   Frame             18346 non-null  object \n",
+      " 3   class_label       18346 non-null  int64  \n",
+      " 4   x_center          18346 non-null  float64\n",
+      " 5   y_center          18346 non-null  float64\n",
+      " 6   width             18346 non-null  float64\n",
+      " 7   height            18346 non-null  float64\n",
+      " 8   confidence_level  18346 non-null  float64\n",
+      "dtypes: float64(5), int64(1), object(3)\n",
+      "memory usage: 1.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "res_csv.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "112a146f",
    "metadata": {},
    "outputs": [],
    "source": []
