--- a/prototyping/logo_detection_training/Swedish_model_v5m6_experiments.ipynb
+++ b/prototyping/logo_detection_training/Swedish_model_v5m6_experiments.ipynb
@@ -7033,13 +7033,7 @@
       "                   all         46        121          0          0          0          0\n",
       "\n",
       "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n",
-      "     20/149      4.74G    0.09262    0.01201   0.009087         14        640: 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "     20/149      4.74G    0.09262    0.01201   0.009087         14        640: 1\n",
       "                 Class     Images  Instances          P          R      mAP50   \n",
       "                   all         46        121          0          0          0          0\n",
       "\n",
@@ -7291,13 +7285,7 @@
       "                 Class     Images  Instances          P          R      mAP50   \n",
       "                   all         46        121      0.904      0.753      0.831      0.473\n",
       "\n",
-      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "      Epoch    GPU_mem   box_loss   obj_loss   cls_loss  Instances       Size\n",
       "     69/149      4.74G    0.04705      0.011   0.002057         91        640: 1\n",
       "                 Class     Images  Instances          P          R      mAP50   \n",
       "                   all         46        121      0.888       0.77      0.854      0.528\n",
