--- a/protest_detection/testing.ipynb
+++ b/protest_detection/testing.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "733fb955",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
    ],
    "source": [
     "# Load the protest prediction model\n",
-    "model_checkpoint = torch.load('model_best.pth.tar')\n",
+    "model_checkpoint = torch.load('../../protest-detection-violence-estimation/model_best.pth.tar')\n",
     "model.load_state_dict(model_checkpoint['state_dict'])\n",
     "model.eval()\n",
     "\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "2d59cf30",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "d978be23",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "c9e767f7",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "2f831c0b",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "e227fe5b",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "19af299b",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "0  0.016833  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
